k8s/sources-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sources-service
  labels:
    app: sources-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sources-service
  template:
    metadata:
      labels:
        app: sources-service
    spec:
      containers:
      - name: sources-service
        image: gcr.io/albertlockett-test2/sports-betting-service:latest
        imagePullPolicy: Always
