k8s/web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
    app: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
      - name: sources-service
        image: gcr.io/albertlockett-test2/sports-betting-web-api:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  selector:
    app: web-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
